2006-11-03  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/irunner.py (main): modified irunner so it automatically
	recognizes the right runner to use based on the extension (.py for
	python, .ipy for ipython and .sage for sage).

	* IPython/iplib.py (InteractiveShell.ipconfig): new builtin, also
	visible in ipapi as ip.config(), to programatically control the
	internal rc object.  There's an accompanying %config magic for
	interactive use, which has been enhanced to match the
	funtionality in ipconfig.

	* IPython/Magic.py (magic_system_verbose): Change %system_verbose
	so it's not just a toggle, it now takes an argument.  Add support
	for a customizable header when making system calls, as the new
	system_header variable in the ipythonrc file.

2006-11-03  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ipipe.py: xrepr(), xiter() and xattrs() are now
	generic functions (using Philip J. Eby's simplegeneric package).
	This makes it possible to customize the display of third-party classes
	without having to monkeypatch them. xiter() no longer supports a mode
	argument and the XMode class has been removed. The same functionality can
	be implemented via IterAttributeDescriptor and IterMethodDescriptor.
	One consequence of the switch to generic functions is that xrepr() and
	xattrs() implementation must define the default value for the mode
	argument themselves and xattrs() implementations must return real
	descriptors.

	* IPython/external: This new subpackage will contain all third-party
	packages that are bundled with IPython. (The first one is simplegeneric).

	* IPython/Extensions/ipipe.py (ifile/ils): Readd output of the parent
	directory which as been dropped in r1703.

	* IPython/Extensions/ipipe.py (iless): Fixed.

	* IPython/Extensions/ibrowse: Fixed sorting under Python 2.3.

2006-11-03  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (InteractiveShell.var_expand): fix stack